# rust-exercises

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  solution_image.rs  solution_main.rs  solution_mod.rs  template_image.rs
.cargo/: config.toml
.solutions/: deserialize.rs  fizzbuzz.rs  fizzbuzz_no_allocation.rs  iterator_last_two.rs  modularization.rs  quiz.rs  traits.rs
.solutions/modularization/: prelude.rs
assets/c_reqwest_server/: Cargo.toml
c_flatbuffers/: Cargo.toml
c_flatbuffers/src/: lib.rs
c_prost/: Cargo.toml
c_prost/data/: artifact.proto
c_prost/src/: lib.rs
c_pyo3/rust_from_python/src/: lib.rs
c_reqwest/: Cargo.toml
c_reqwest/server/src/: main.rs
c_reqwest/src/: lib.rs
c_serde/: Cargo.toml
c_serde/src/: lib.rs
c_serde/src/deserialize/: mod.rs
crates/c_pyo3/python_from_rust/: Cargo.toml
crates/c_pyo3/python_from_rust/src/: lib.rs
crates/c_pyo3/rust_from_python/: Cargo.toml
crates/c_reqwest/: Cargo.toml
crates/c_reqwest/assets/c_reqwest_server/src/: main.rs
crates/c_serde/: Cargo.toml
crates/c_serde/src/: lib.rs
crates/c_serde/src/c_serde_1_deserialize/: mod.rs
crates/c_serde/src/deserialize/: mod.rs
data/: temp_data.json
e01_fibonacci/: Cargo.toml
e01_fibonacci/src/: e01_1_recursive.rs  e01_2_closed_form.rs  lib.rs
e01_fibonacci/src/e01_1_recursive/: mod.rs
e01_fibonacci/src/e01_2_closed_form/: mod.rs
e02_fizzbuzz/: Cargo.toml
e02_fizzbuzz/src/: lib.rs
e02_fizzbuzz/src/e02_1_imperative/: mod.rs
e02_fizzbuzz/src/e02_2_functional/: mod.rs
e03_temperature/src/: lib.rs
e03_temperature/src/e03_1_temperature/: mod.rs
e04_modularization/: Cargo.toml
e04_modularization/src/: lib.rs
e05_quiz/: Cargo.toml
e05_quiz/src/: lib.rs
e05_quiz/src/e05_1_quiz/: mod.rs
e06_traits/src/: lib.rs
e06_traits/src/e06_1_traits/: mod.rs  temp_unit.rs
e07_iterator/: Cargo.toml
e07_iterator/src/: lib.rs
exercises/e01_fibonacci/: Cargo.toml
exercises/e01_fibonacci/src/: lib.rs
exercises/e01_fibonacci/src/e01_1_recursive/: mod.rs
exercises/e01_fibonacci/src/e01_2_closed_form/: mod.rs
exercises/e01_fibzz/: Cargo.toml
exercises/e01_fibzz/src/: lib.rs
exercises/e01_fibzz/src/e01_3_imperative_fizzbuzz/: mod.rs
exercises/e02_temperature/: Cargo.toml
exercises/e02_temperature/src/: lib.rs
exercises/e02_temperature/src/e02_1_temperature/: mod.rs
exercises/e03_modularization/: Cargo.toml
exercises/e03_modularization/src/: lib.rs
exercises/e03_temperature/: Cargo.toml
exercises/e03_temperature/src/: lib.rs
exercises/e04_modularization/src/: lib.rs
exercises/e04_quiz/: Cargo.toml
exercises/e04_quiz/src/: lib.rs
exercises/e04_quiz/src/e04_1_quiz/: mod.rs
exercises/e05_quiz/data/: questions.txt
exercises/e05_quiz/src/: lib.rs
exercises/e05_quiz/src/e05_1_quiz/: mod.rs
exercises/e05_traits/: Cargo.toml
exercises/e05_traits/src/: lib.rs
exercises/e05_traits/src/e05_1_traits/: mod.rs
exercises/e06_iterators/: Cargo.toml
exercises/e06_iterators/src/: lib.rs
exercises/e06_traits/: Cargo.toml
exercises/e06_traits/src/: lib.rs
exercises/e06_traits/src/e06_1_traits/: mod.rs
exercises/e07_iterator/src/: lib.rs
exercises/e07_iterator/src/e07_1_iterator/: mod.rs
projects/p_ferroscope/: Cargo.toml
projects/p_ferroscope/assets/: 0114-closures.md  error-chaining.txt  private-fields.txt
projects/p_ferroscope/src/: lib.rs
projects/p_ferroscope/src/p_ferroscope/: mod.rs
projects/p_multithreading/: Cargo.toml
projects/p_multithreading/src/: lib.rs
projects/p_multithreading/src/p_multithreading/: image.rs  mod.rs
projects/p_multithreading/src/p_multithreading/image/: image_cfg.rs
projects/p_neuralnetwork/: Cargo.toml
projects/p_neuralnetwork/src/: lib.rs  remain.rs
projects/p_neuralnetwork/src/p_neuralnetwork/: mod.rs
solutions/: deserialize.rs  e07_iterator_index.rs  fibonacci_recursive.rs  fizzbuzz.rs  fizzbuzz_no_allocation.rs  iterator.rs  iterator_last_two.rs  modularisation.rs  modularization.rs  quiz.rs  temperature.rs  traits.rs
solutions/deserialize/: temp_unit.rs
solutions/exercises/: e01_1_fibonacci.rs  e02_2_fizzbuzz.rs  e03_1_temperature.rs  e06_traits.rs  e07_iterator_phi_psi.rs
solutions/traits/: temp_unit.rs
src/: deserialize.rs  fibonacci_closed_form.rs  fibonacci_recursive.rs  fizzbuzz.rs  lib.rs  modularisation.rs  quiz.rs  temperature.rs  traits.rs
src/deserialize/: temp_unit.rs
src/solutions/: fibonacci_closed_form.rs  traits.rs
src/traits/: temp_unit.rs
xtask/: Cargo.toml
xtask/src/: git.rs  main.rs  reports.rs
