[workspace]
members = [
	# Exercises
	"e01_fibonacci",
	"e02_fizzbuzz",
	"e03_temperature",
	"e04_modularization",
	"e05_quiz",
	"e06_traits",
	"e07_iterator",
	# Crates
	"c_flatbuffers",
	"c_prost",
	"c_pyo3/rust_from_python",
	"c_pyo3/python_from_rust",
	"c_reqwest",
	"c_reqwest/server",
	"c_serde",
	# Projects
	# Misc
	"xtask",
]
# Run global cargo commands only in those directories
default-members = [
	"e01_fibonacci",
	"e02_fizzbuzz",
	"e03_temperature",
	"e04_modularization",
	"e05_quiz",
	"e06_traits",
	"e07_iterator",
	"c_serde",
]
resolver = "2"

[workspace.package]
authors = ["Cyril Marpaud"]
categories = ["rust-patterns"]
description = "Rust exercises for training sessions"
documentation = "https://gitlab.com/cmp-trainings/rust/rust-exercises/-/blob/main/README.md"
edition = "2024"
homepage = "https://gitlab.com/cmp-trainings/rust/rust-exercises"
keywords = ["training", "rust", "exercises"]
license = "CC-BY-NC-SA-4.0"
publish = false
readme = "README.md"
repository = "https://gitlab.com/cmp-trainings/rust/rust-exercises"
version = "0.1.0"
