[workspace]
# Run global cargo commands only in those directories
default-members = [
	"crates/c_serde",
	"exercises/e01_fibonacci",
	"exercises/e02_fizzbuzz",
	"exercises/e03_temperature",
	"exercises/e04_modularization",
	"exercises/e05_quiz",
	"exercises/e06_traits",
	"exercises/e07_iterator",
]
members = [
	"assets/c_reqwest_server",
	"crates/c_flatbuffers",
	"crates/c_prost",
	"crates/c_pyo3/rust_from_python",
	"crates/c_pyo3/python_from_rust",
	"crates/c_reqwest",
	"crates/c_serde",
	"exercises/e01_fibonacci",
	"exercises/e02_fizzbuzz",
	"exercises/e03_temperature",
	"exercises/e04_modularization",
	"exercises/e05_quiz",
	"exercises/e06_traits",
	"exercises/e07_iterator",
	"xtask",
]
resolver = "3"

[workspace.package]
authors = ["Cyril Marpaud"]
categories = ["rust-patterns"]
description = "Rust exercises for training sessions"
documentation = "https://gitlab.com/cmp-trainings/rust/rust-exercises/-/blob/main/README.md"
edition = "2024"
homepage = "https://gitlab.com/cmp-trainings/rust/rust-exercises"
keywords = ["training", "rust", "exercises"]
license = "CC-BY-NC-SA-4.0"
publish = false
readme = "README.md"
repository = "https://gitlab.com/cmp-trainings/rust/rust-exercises"
version = "0.1.0"
