[package]
name = "xtask"

authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
xshell = "0.2"
