[package]
name = "c_reqwest_server"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt-multi-thread"] }
